--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
+    /* border:  1px solid red; */
 }
 
 li {
@@ -50,6 +51,7 @@ body {
 
 .left .title {
     margin-bottom: 30px;
+    width: 400px;
 }
 
 ul {
@@ -161,4 +163,136 @@ button{
 
 button:hover{
     background-image: var(--submit-hover);
+}
+
+@media screen and (max-width: 950px) and (min-width:376px) {
+    body{
+        display: flex;
+        justify-content: center;
+    }
+    .container{
+        flex-direction: column-reverse;
+        padding: 30px;
+        padding-left: 30px;
+        width: 450px;
+        position: static;
+        top: 0%;
+        left: 0%;
+        transform: translate(0%, 0%);
+        margin-top: 40px;
+    }
+
+    .left{
+        width: 100%;
+    }
+
+    .left h1{
+        font-size: 39px;
+        margin-top: 33px;
+        margin-bottom: 19px;
+    }
+
+    .left .title{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    ul{
+        margin-bottom: 20px;
+    }
+
+    .form-div{
+        width: 100%;
+    }
+
+    input{
+        width: 100% !important;
+    }
+
+    .submit{
+        margin-bottom: 0px;
+    }
+    
+    .right{
+        width: 100%;
+        height: 200px;
+        background-image: url(./assets/images/illustration-sign-up-mobile.svg);
+    }
+}
+
+@media screen and (max-width: 376px) {
+    body{
+        display: flex;
+        justify-content: center;
+    }
+    .container{
+        flex-direction: column-reverse;
+        padding: 0px;
+        width: 450px;
+        position: static;
+        top: 0%;
+        left: 0%;
+        transform: translate(0%, 0%);
+        border-radius: 0px;
+    }
+
+    .left{
+        width: 100%;
+        padding: 30px;
+    }
+
+    .left h1{
+        font-size: 39px;
+        margin-top: 15px;
+        margin-bottom: 19px;
+    }
+
+    .left .title{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    ul{
+        margin-bottom: 20px;
+    }
+
+    .form-div{
+        width: 100%;
+    }
+
+    input{
+        width: 100% !important;
+    }
+
+    .submit{
+        margin-bottom: 0px;
+    }
+
+    .thanks{
+        width: 100%;
+        height: 100vh;
+        position: static;
+        top: 0%;
+        left: 0%;
+        transform: translate(0%, 0%);
+        border-radius: 0px;
+        padding: 24px;
+    }
+
+    .thanks p{
+        width: 100%;
+    }
+
+    button{
+        width: 100%;
+    }
+    
+    .right{
+        width: 100%;
+        height: 200px;
+        border-radius: 0;
+        border-bottom-right-radius: 20px;
+        border-bottom-left-radius: 20px;
+        background-image: url(./assets/images/illustration-sign-up-mobile.svg);
+    }
 }
